# tp_aeds2_arvores_digitais

./: PraFuncionarAqui.txt  README.md
aplicacao_arvores_digitais/: CMakeLists.txt  a.txt  arquivo2.txt  b.txt  busca.c  busca_termos.txt  c.txt  lista1.txt  lista2.txt  lista_encadeada.c  lista_encadeada.h  main.c  patricia.c  patricia.h  pilha.c  pilha.h  tp  tst.c  tst.h
aplicacao_arvores_digitais/Libs/: lista_encadeada.h  patricia.h  pilha.h  tst.h
aplicacao_arvores_digitais/aplicacao_arvores_digitais/: tst.c  tst.h
